-
Bug
-
Resolution: Done
-
P1: Critical
-
5.10.0, 5.9.4
-
Desktop Linux, QNX
Steps to reproduce:
- run the attached project and build it with Qt Quick Compiler
The running gives a log:
qml: PhoneNumberInvalidSingleton: undefined
While the expected result should be as it is with out Qt Quick Compiler:
qml: PhoneNumberInvalidSingleton: -1
| For Gerrit Dashboard: QTBUG-66067 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 218361,2 | Fix exposure of -1 as enum value in QML exposed C++ singletons | 5.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |